--- a/aboutus.html
+++ b/aboutus.html
@@ -14,22 +14,22 @@
         <div class="nav-links">
             <input type="checkbox" id="checkbox_toggle" >
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
-        <li><div class="menu">
+        <div class="menu">
                 <div class="list1"><a href="index.html">Home</a></div>
                 <div class="list1"><a href="aboutus.html">About</a></div>     
                 <div class="services list1">
-                <a href="#">Products</a>
-                <!-- DROPDOWN MENU -->
-                <ul class="dropdown-content">
-                    <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
-                    <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
-                    <li class="list2"><a href="WillProduct.html">William</a></li>
-                    <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
-                </ul>
+                    <a href="#">Products</a>
+                    <!-- DROPDOWN MENU -->
+                    <ul class="dropdown-content">
+                        <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
+                        <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
+                        <li class="list2"><a href="WillProduct.html">William</a></li>
+                        <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
+                    </ul>
                 </div>
                 <div class="list1"><a href="gallery.html">Gallery</a></div>
                 <div class="list1"><a href="contact.html">Contact Us</a></div>
-            </div></li>   
+            </div>
         </div>
       </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
