--- a/WillProduct.html
+++ b/WillProduct.html
@@ -97,10 +97,12 @@
 
 <!-- Travel photo centered-->
 <section class="background0000">
-  <div class="center">
-    <h1></h1>
+  <div class="container2">
+  <div class="centerr">
+    <h3>Imagine yourself traveling around the world</h3>
     <img class='resize_fit_center'
       src='image/TravellPhoto.jpg' alt="TravelPhoto">
+      </div>
     </div>
   </section>
 
