--- a/WillProduct.html
+++ b/WillProduct.html
@@ -98,7 +98,7 @@
 <!-- Travel photo centered-->
 <section class="background0000">
   <div class="container2">
-  <div class="centerr">
+  <div class="centerr2">
     <h3>Imagine yourself traveling around the world</h3>
     <img class='resize_fit_center'
       src='image/TravellPhoto.jpg' alt="TravelPhoto">
