--- a/aboutus.html
+++ b/aboutus.html
@@ -35,6 +35,7 @@
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     <section class="background1">
+        <div class="containerindex">
         <div class="center">
             <h1>About <i>GR8 Consulting</i></h1>
             <p id="PLayout2">
@@ -78,6 +79,7 @@
                 <li>Use behind the scene coding to get you where you need to go the most efficiently</li>
             </ul>
             <button onclick="WButton()">View Product</button>
+        </div>
         </div>
     </section>
 
