--- a/contact.html
+++ b/contact.html
@@ -81,18 +81,15 @@
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       </div>
         
-    <!-- Concluding remarks and button to contact us page-->   
+    <!--Concluding remarks and button to contact us page-->   
     <section class="background2">
       <div class="container2">
-          <div class="center">
-              <h1>If you'd like to learn more...</h1>
-              <p>Get in reach with one of our GIS specialists today!</p>
-              <button onclick = "myButton()">Book a Consultation</button>
-          </div>
+          <div class="center"></div>
       </div>
     </section>
 
-    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+    <script src="Script.js"></script> <!--Call in script.js for button and other functions-->
+
   </body>
-  
+
 </html>
