--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,26 @@
     <!--Concluding remarks and button to contact us page-->   
     <section class="background2">
       <div class="container2">
-          <div class="center"></div>
+          <div class="center">
+              <h1>If you'd like to learn more...</h1>
+              <p>Get in reach with one of our GIS specialists today!</p>
+              <button onclick="myButton()">Book a Consultation</button>
+          </div>
+          <!--Back to Top Button-->
+          <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+          </div>
       </div>
     </section>
-
     <script src="Script.js"></script> <!--Call in script.js for button and other functions-->
-
+    <script>
+      // Get the button:
+        let mybutton = document.getElementById("myBtn");
+        
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+        
+    </script>
   </body>
 
 </html>
