--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="containerr">
               <h2>Grace Kim</h2>
               <p class="titlee">CEO & Founder</p>
-              <p>Some text that describes Grace.</p>
+              <p>CEO of GR3 Consultation (apparently)</p>
               <p>grace@example.com</p>
               <p><button class="button3">Contact Grace</button></p>
             </div>
@@ -81,7 +81,7 @@
             <div class="containerr">
               <h2>Chris Broom</h2>
               <p class="titlee">Digital Products Director</p>
-              <p>Some text that describes Chris.</p>
+              <p>Hello, my name is Chris. I make pretty cool maps.</p>
               <p>chris@example.com</p>
               <p><button class="button3">Contact Chris</button></p>
             </div>
